--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,28 @@
 asgiref==3.5.0
+astroid==2.11.2
+attrs==21.4.0
 backports.zoneinfo==0.2.1
+black==22.3.0
+click==8.1.2
+dill==0.3.4
 Django==4.0.2
 django-crispy-forms==1.14.0
 django-tables2==2.4.1
+iniconfig==1.1.1
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.9.0
 Pillow==9.0.1
+platformdirs==2.5.1
+pluggy==1.0.0
+py==1.11.0
+pylint==2.13.5
+pyparsing==3.0.8
+pytest==7.1.1
 sqlparse==0.4.2
+tomli==2.0.1
+typing_extensions==4.1.1
+wrapt==1.14.0
