--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,20 +1,21 @@
 branch-defaults:
-  ebtest-docker:
-    environment: djangoexample-dev
-    group_suffix: null
   main:
     environment: djangoexample-dev
+    group_suffix: null
+  master:
+    environment: null
+    group_suffix: null
 global:
   application_name: djangoexample
   branch: null
   default_ec2_keyname: null
-  default_platform: Docker running on 64bit Amazon Linux 2
+  default_platform: Python 3.8 running on 64bit Amazon Linux 2
   default_region: ap-southeast-1
   include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: null
+  profile: eb-cli
   repository: null
   sc: git
   workspace_type: Application
