--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,14 +1,11 @@
 branch-defaults:
   main:
-    environment: djangoexample-dev
-    group_suffix: null
-  master:
     environment: null
     group_suffix: null
 global:
   application_name: djangoexample
   branch: null
-  default_ec2_keyname: null
+  default_ec2_keyname: aws-eb
   default_platform: Python 3.8 running on 64bit Amazon Linux 2
   default_region: ap-southeast-1
   include_git_submodules: true
