added github action for test

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,8 @@ cython_debug/
 
 
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
