--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,88 @@
 asgiref==3.5.0
 astroid==2.11.2
 attrs==21.4.0
+awsebcli==3.20.3
+backports.zoneinfo==0.2.1
+bcrypt==3.2.0
 black==22.3.0
+blessed==1.19.1
+botocore==1.23.54
+cached-property==1.5.2
+cement==2.8.2
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.1.2
+colorama==0.4.3
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==36.0.2
 dill==0.3.4
 Django==4.0.2
+django-classy-tags==3.0.1
+django-cms==3.10.0
+django-cors-headers==3.11.0
 django-crispy-forms==1.14.0
+django-environ==0.8.1
+django-formtools==2.3
+django-geolocation-fields==0.1.8
+django-geoposition==0.3.0
+django-mysql==4.5.0
+django-osm-field==0.5.0
+django-rest-swagger==2.2.0
+django-sekizai==3.0.1
 django-tables2==2.4.1
+django-treebeard==4.5.1
+djangocms-admin-style==3.1.0
+djangorestframework==3.13.1
+djangorestframework-api-key==2.2.0
+djangorestframework-simplejwt==5.1.0
+docker==4.4.4
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
+future==0.16.0
+idna==3.3
 iniconfig==1.1.1
 isort==5.10.1
+itypes==1.2.0
+Jinja2==3.1.1
+jmespath==0.10.0
+jsonschema==3.2.0
 lazy-object-proxy==1.7.1
+MarkupSafe==2.1.1
 mccabe==0.7.0
 mypy-extensions==0.4.3
+mysqlclient==2.1.0
+openapi-codec==1.3.2
 packaging==21.3
+paramiko==2.10.3
 pathspec==0.9.0
 Pillow==9.0.1
 platformdirs==2.5.1
 pluggy==1.0.0
 py==1.11.0
+pycparser==2.21
+PyJWT==2.3.0
 pylint==2.13.5
+PyNaCl==1.5.0
 pyparsing==3.0.8
+pyrsistent==0.18.1
 pytest==7.1.1
+python-dateutil==2.8.2
+pytz==2022.1
+PyYAML==5.4.1
+requests==2.26.0
+semantic-version==2.8.5
+simplejson==3.17.6
+six==1.14.0
 sqlparse==0.4.2
+termcolor==1.1.0
+texttable==1.6.4
 tomli==2.0.1
 typing_extensions==4.1.1
+uritemplate==4.1.1
+urllib3==1.26.9
+wcwidth==0.1.9
+websocket-client==0.59.0
 wrapt==1.14.0
