fixes on eb configs

--- a/.ebextensions/01_django.config
+++ b/.ebextensions/01_django.config
@@ -1,15 +1,5 @@
-# .ebextensions/01_django.config
-
 option_settings:
-  aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: "djangoexample.settings"
-    PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:container:python:
-    WSGIPath: "djangoexample.wsgi:application"
-container_commands:
-  01_makemigrations:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
-    leader_only: true
-  02_migrate:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --noinput"
-    leader_only: true
+    WSGIPath: djangoexample/wsgi.py
+aws:elasticbeanstalk:environment:
+    EnvironmentType: SingleInstance
