--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,5 +1,4 @@
 option_settings:
-  "aws:elasticbeanstalk:container:python":
-    WSGIPath: "djangoexample/wsgi.py"
-  "aws:elasticbeanstalk:environment":
-    EnvironmentType: "SingleInstance"
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: djangoexample/wsgi.py
+  
