--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,4 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: djangoexample/wsgi.py
-  
+    WSGIPath: djangoexample.wsgi:application 
