--- a/.github/workflows/ebdeploy.yml
+++ b/.github/workflows/ebdeploy.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python Environment
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.8'
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
