--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,7 @@
 branch-defaults:
   main:
     environment: djangoexample-dev
+    group_suffix: null
 global:
   application_name: djangoexample
   branch: null
