--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   main:
-    environment: null
+    environment: django-example-dev
     group_suffix: null
 global:
   application_name: django-example
